# OLV-PYQT

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  test_config_sync.py
OQBackend/: ws_client.py
OQConfig/: CONFIG_MANAGEMENT_SOLUTION.md  __init__.py  app_settings.json  app_settings_manager.py  cache_cleaner.py  config.py  config.yaml  config_logger.py  config_manager.py  config_sync_service.py  current_selection.json
OQController/: asr_recorder.py  audio_state_manager.py  chat_history_manager.py  expression_controller.py  tts_player.py  ws_controller.py
OQSettings/: setting.qml  settings_qml_slot.py
OQWindows/: chat_floating_window.py  qml_settings_page.py  qt_window_main.py  test_vad_stop.py
tests/: test_tts_player_queue.py
